# src/ElectroShop.Application/Features/Reports/Queries/GetMonthlySalesReport/GetMonthlySalesReportQueryValidator.cs
@@ -1,0 +1,12 @@
+using ElectroShop.Application.Features.Sales.Queries.ExportMonthlySales;
+using FluentValidation;
+
+namespace ElectroShop.Application.Features.Reports.Queries.GetMonthlySalesReport;
+
+public class GetMonthlySalesReportQueryValidator : AbstractValidator<GetMonthlySalesReportQuery>
+{
+    public GetMonthlySalesReportQueryValidator()
+    {
+        MonthlySalesExportValidationRules.Apply(this, x => x.Year, x => x.Month);
+    }
+}
